--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+streamlit==1.26.0
+transformers==4.36.0
+pandas==2.1.4
+numpy==1.26.2
+plotly==5.18.0
+torch==2.1.0
+scikit-learn==1.3.2
+jsonschema==4.19.0
 
