--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ plotly==5.18.0
 torch==2.1.0
 scikit-learn==1.3.2
 jsonschema==4.19.0
+requests==2.31.0
+PyYAML==6.0.1
+protobuf==3.20.*
+tokenizers==0.14.1
 
