--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,10 @@ requests==2.31.0
 PyYAML==6.0.1
 protobuf==3.20.*
 tokenizers==0.14.1
+tqdm==4.66.1
+sentencepiece==0.1.99
+urllib3==1.26.18
+charset-normalizer==3.3.2
+idna==3.6
+certifi==2023.7.22
 
