--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ transformers==4.36.0
 pandas==2.1.4
 numpy==1.26.2
 plotly==5.18.0
-torch==2.1.0
+torch==2.2.0
 scikit-learn==1.3.2
 jsonschema==4.19.0
 requests==2.31.0
@@ -16,4 +16,5 @@ urllib3==1.26.18
 charset-normalizer==3.3.2
 idna==3.6
 certifi==2023.7.22
+rich==12.6.0
 
