--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit==1.26.0
-transformers==4.36.0
-pandas==2.1.4
-numpy==1.26.2
-plotly==5.18.0
-scikit-learn==1.3.2
-requests==2.31.0
-Pillow==9.4.0
+streamlit
+transformers
+pandas
+numpy
+plotly
+scikit-learn
+requests
 
 
