--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-transformers
-pandas
-numpy
-plotly
-scikit-learn
-requests
+streamlit==1.15.0
+transformers==4.36.0
+pandas==2.1.4
+numpy==1.26.2
+plotly==5.18.0
+scikit-learn==1.3.2
+requests==2.31.0
 
 
