--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.15.0
+streamlit==1.26.0
 transformers==4.36.0
 pandas==2.1.4
 numpy==1.26.2
@@ -6,6 +6,7 @@ plotly==5.18.0
 scikit-learn==1.3.2
 requests==2.31.0
 altair==4.2.0
+torch==2.0.0
 
 
 
